[package]
name = "copperline"
version = "0.0.1"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Pure-Rust Command Line Editing Library"
license = "MIT"
repository = "https://github.com/srijs/rust-copperline"
keywords = ["readline", "linenoise", "command", "line", "editing"]

[dependencies]
libc = "0.1.8"
nix = "0.3.9"
